--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
                 <div class="w-full md:w-1/2 fade-in">
                     <h3 class="text-2xl font-semibold mb-4 text-gray-800">Hi, I'm Oumaima Omari</h3>
                     <p class="text-gray-600 mb-4">
-                        Oumaima Omari is a dedicated Data Analyst with a master's degree in Audit and Management Control, currently advancing her expertise through the ALX Data Analytics program. As a co-leader of Team Inua, she develops tech-based solutions to address youth unemployment, demonstrating exceptional collaboration and problem-solving abilities while tackling complex social challenges. Her vision centers on leveraging data to drive strategic decisions that improve operational efficiency.
+                        Oumaima Omari is a data-driven professional with a master’s degree in Audit and Management Control, currently expanding her expertise through the ALX Data Analytics program. Passionate about using data to solve real-world problems, she co-leads Team Inua, a tech initiative focused on combating youth unemployment. 
                     </p>
                     <p class="text-gray-600 mb-6">
-                        Combining technical data analytics skills with a strong foundation in management control, Omari aims to create impactful solutions for the finance and technology sectors. Her notable achievements include making significant progress on the Inua youth employment initiative and creating actionable insights by merging analytical techniques with financial expertise. Omari consistently demonstrates resilience and adaptability, applying newly acquired skills to real-world scenarios that deliver tangible results.
+                        With a strong foundation in finance and analytics, Oumaima excels at transforming complex data into strategic insights that support decision-making and drive impact in both the finance and technology sectors.
                     </p>
                     
                     <div class="flex flex-wrap gap-4 mb-8">
