--- a/index.html
+++ b/index.html
@@ -337,10 +337,11 @@
                 <div class="w-full md:w-1/2 fade-in">
                     <h3 class="text-2xl font-semibold mb-4 text-gray-800">Hi, I'm Oumaima Omari</h3>
                     <p class="text-gray-600 mb-4">
-                        Oumaima Omari is a data-driven professional with a master’s degree in Audit and Management Control, currently expanding her expertise through the ALX Data Analytics program. Passionate about using data to solve real-world problems, she co-leads Team Inua, a tech initiative focused on combating youth unemployment. 
+                        I transform data into actionable insights that drive strategic decisions. With a Master's in Audit and Management Control and ongoing specialization through the ALX Data Analytics program, I bridge the worlds of finance and technology.
                     </p>
                     <p class="text-gray-600 mb-6">
-                        With a strong foundation in finance and analytics, Oumaima excels at transforming complex data into strategic insights that support decision-making and drive impact in both the finance and technology sectors.
+                        As co-leader of Team Inua, I'm passionate about leveraging data science to address youth unemployment and create meaningful social impact.
+My expertise lies in translating complex information into clear narratives that help organizations identify opportunities and solve real-world challenges.
                     </p>
                     
                     <div class="flex flex-wrap gap-4 mb-8">
