--- a/index.html
+++ b/index.html
@@ -340,8 +340,7 @@
                         I transform data into actionable insights that drive strategic decisions. With a Master's in Audit and Management Control and ongoing specialization through the ALX Data Analytics program, I bridge the worlds of finance and technology.
                     </p>
                     <p class="text-gray-600 mb-6">
-                        As co-leader of Team Inua, I'm passionate about leveraging data science to address youth unemployment and create meaningful social impact.
-My expertise lies in translating complex information into clear narratives that help organizations identify opportunities and solve real-world challenges.
+                        I help businesses unlock the power of their data to make smarter, faster decisions. With expertise in data analytics, visualization, and insights extraction, I transform complex data into clear, actionable strategies that drive growth and efficiency. Whether you need support with data cleaning, reporting, or predictive analysis, I deliver solutions tailored to your unique goals.
                     </p>
                     
                     <div class="flex flex-wrap gap-4 mb-8">
