--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                         </div>
                     </div>
                     
-                    <a href="_Resume - OUMAIMA OMARI.pdf" class="inline-flex items-center bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-opacity-90 transition-colors whitespace-nowrap" download>
+                    <a href="Resume.pdf" target="_blank" class="inline-flex items-center bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-opacity-90 transition-colors whitespace-nowrap" download>
                         <div class="w-5 h-5 flex items-center justify-center mr-2">
                             <i class="ri-download-line"></i>
                         </div>
@@ -837,7 +837,7 @@
                 <div class="w-full lg:w-1/2 fade-in">
                     <div class="bg-white rounded-lg shadow-md p-8">
                         <h3 class="text-2xl font-semibold mb-6 text-gray-800">Send a Message</h3>
-                        <form id="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                        <form id="contact-form" action="https://formspree.io/f/xyzwvkpe" method="POST">
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
                                 <div>
                                     <label for="name" class="block text-sm font-medium text-gray-700 mb-2">Full Name</label>
