download link fixed

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                         </div>
                     </div>
                     
-                    <a href="Resume.pdf" target="_blank" class="inline-flex items-center bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-opacity-90 transition-colors whitespace-nowrap" download>
+                    <a href="Resume.pdf" target="_blank" class="inline-flex items-center bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-opacity-90 transition-colors whitespace-nowrap" download="Resume.pdf">
                         <div class="w-5 h-5 flex items-center justify-center mr-2">
                             <i class="ri-download-line"></i>
                         </div>
